Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-67964

lupdate: Treat warnings as errors

XMLWordPrintable

    • 8c5f80257 (dev)

      There should be an option to treat warnings as errors when lupdate knows that something was wrong, like when using raw string literals (QTBUG-42736). The only way to catch these issues right now is by parsing stderr output from lupdate.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            masoud.jami Masoud Jami
            nocnokneo Taylor Braun-Jones
            Votes:
            4 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes