lupdate: treat warnings as errors using -Werror arg

Add the Werror option to the lupdate options.
Also add a new function printWarning (similar to printErr and
printOut) which will produce a warning or an error, considering
the given options (Werror).

Fixes: QTBUG-67964
Change-Id: I7f2f06b5c4f650fe7337beafd4f0114e5c8c683e
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>