src/linguist/lupdate/lupdate.h
@@ -31,7 +31,8 @@ enum UpdateOption {
     RelativeLocations = 512,
     NoLocations = 1024,
     NoUiLines = 2048,
-    SourceIsUtf16 = 4096
+    SourceIsUtf16 = 4096,
+    Werror = 8192
 };
 
 Q_DECLARE_FLAGS(UpdateOptions, UpdateOption)
